# wasi-analyst

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  PAPER_INSPIRATION.md  README.md  __init__.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/wasi_analyst/agents/: base.py  coordinator.py  execution_agent.py  fundamental_agent.py  llm_mixins.py  macro_agent.py  policy_rules.py  risk_manager.py  sentiment_agent.py
src/wasi_analyst/app/: cli.py  run.py
src/wasi_analyst/core/: market.py  orderbook.py
src/wasi_analyst/data/: providers.py
src/wasi_analyst/providers/: llm.py
src/wasi_analyst/ui/: app.py  launch.py
src/wasi_analyst/util/: config.py  logging.py  metrics.py  schemas.py  settings.py  store.py
