[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "wasi-analyst"
version = "0.2.0"
description = "Wasi Analyst — Investment Analyst Lab"
authors = [{ name="Pablo A. Guzzi" }]
readme = "README.md"
license = { file = "LICENSE" }   # 👈 agrega esta línea
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "yfinance",
    "duckdb",
    "pandas",
    "numpy",
    "openai",
]



dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "structlog>=24.1",
  "tenacity>=8.2",
  "numpy>=1.26",
  "streamlit>=1.34",
  "plotly>=5.22",
  "python-dotenv>=1.0",
  "openai>=1.51"
]

[project.scripts]
wasi = "wasi_analyst.app.cli:app"
wasi-ui = "wasi_analyst.ui.launch:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
