[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wasi-analyst"
version = "0.2.2"
description = "Wasi Analyst: multi-agent investment analysis lab"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Wasi Analyst" }]
license = { file = "LICENSE" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
